--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="cs_main_header_right">
               <div class="cs_btn_animation">
-                <a class='cs_btn cs_style_1 cs_color_1' href="/assets/pdf/Nuraia-Nahrin-Fahmida-Resume.pdf"><span>My Resume</span></a>
+                <a class='cs_btn cs_style_1 cs_color_1' target="_blank" href="/assets/pdf/Nuraia-Nahrin-Fahmida-Resume.pdf"><span>My Resume</span></a>
               </div>
               <!-- <div class="cs_nav cs_medium">
                 <ul class="cs_nav_list cs_animo_links">
@@ -203,7 +203,7 @@
           <div class="col-lg-6">
             <div class="cs_portfolio_info">
               <div>
-                <h2 class="cs_portfolio_title"><a class='cs_title_animation' target="_blank" href='https://nnahrin.itch.io/gummibuildship'>Gummi Buildship</a></h2>
+                <h2 class="cs_portfolio_title"><a class='cs_title_animation' target="_blank" href='https://nnahrin.itch.io/gummibuildship'>Gummiship Build</a></h2>
                 <div class="cs_portfolio_subtitle cs_title_animation">A bucket featuring a plate with holes of varying shapes. Shapes are generated at random and must
                   precisely fit into the geometric hole. Here, physics ideas are used. All models are from scratch
                   using blender.</div>
