--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="cs_main_header_right">
               <div class="cs_btn_animation">
-                <a class='cs_btn cs_style_1 cs_color_1' target="_blank" href="/assets/pdf/Nuraia-Nahrin-Fahmida-Resume.pdf"><span>My Resume</span></a>
+                <a class='cs_btn cs_style_1 cs_color_1' target="_blank" href="/assets/pdf/Nuraia-Nahrin-Fahmida-Resume.pdf"><span style="display: inline;">My Resume</span></a>
               </div>
               <!-- <div class="cs_nav cs_medium">
                 <ul class="cs_nav_list cs_animo_links">
