--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
       <div class="cs_portfolio cs_style_2">
         <div class="row">
           <div class="col-lg-6">
-            <a class='cs_portfolio_thumb cs_shine_hover' target="_blank" href='https://nnahrin.itch.io/gummibuildship'>
+            <a class='cs_portfolio_thumb cs_shine_hover' target="_blank" href='https://studio-23.itch.io/very-difficult-shape-sorter'>
               <span class="cs_portfolio_thumb_in cs_bg" data-src="assets/images/game1.png"></span>
             </a>
           </div>
           <div class="col-lg-6">
             <div class="cs_portfolio_info">
               <div>
-                <h2 class="cs_portfolio_title"><a class='cs_title_animation' target="_blank" href='https://nnahrin.itch.io/gummibuildship'>Gummiship Build</a></h2>
+                <h2 class="cs_portfolio_title"><a class='cs_title_animation' target="_blank" href='https://studio-23.itch.io/very-difficult-shape-sorter'>Gummiship Build</a></h2>
                 <div class="cs_portfolio_subtitle cs_title_animation">A bucket featuring a plate with holes of varying shapes. Shapes are generated at random and must
                   precisely fit into the geometric hole. Here, physics ideas are used. All models are from scratch
                   using blender.</div>
